--- a/notebooks/models.ipynb
+++ b/notebooks/models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 93,
    "id": "289233ab",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 94,
    "id": "780cdb92",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 95,
    "id": "802ed39a",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "11186645"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,10 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "b93b2eef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1940585641.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Nitish Borade\\AppData\\Local\\Temp\\ipykernel_18536\\1940585641.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    class simple_model()\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class simple_model()"
    ]
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "acbe6239",
    "metadata": {},
    "outputs": [],
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "335c7911",
    "metadata": {},
    "outputs": [],
@@ -117,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "a665b86f",
    "metadata": {},
    "outputs": [],
@@ -156,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "59961ef8",
    "metadata": {},
    "outputs": [],
@@ -195,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "3d4bd7c4",
    "metadata": {},
    "outputs": [],
@@ -205,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "27fdc53e",
    "metadata": {},
    "outputs": [],
@@ -215,21 +224,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "a3598bde",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([32, 1])"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model(x)"
    ]
@@ -238,6 +236,130 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "20a443b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f8ed433",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6e31dde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Network(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Network, self).__init__()\n",
+    "        \n",
+    "        self.conv1 = nn.Conv2d(in_channels=1, out_channels=3, kernel_size=5, stride=1, padding=1)\n",
+    "        self.bn1 = nn.BatchNorm2d(3)\n",
+    "        self.conv2 = nn.Conv2d(in_channels=3, out_channels=12, kernel_size=5, stride=1, padding=1)\n",
+    "        self.bn2 = nn.BatchNorm2d(12)\n",
+    "        self.pool = nn.MaxPool2d(2,2)\n",
+    "        self.conv4 = nn.Conv2d(in_channels=12, out_channels=24, kernel_size=5, stride=1, padding=1)\n",
+    "        self.bn4 = nn.BatchNorm2d(24)\n",
+    "        self.conv5 = nn.Conv2d(in_channels=24, out_channels=24, kernel_size=5, stride=1, padding=1)\n",
+    "        self.bn5 = nn.BatchNorm2d(24)\n",
+    "        self.fc1 = nn.Linear(24*10*10, 1)\n",
+    "\n",
+    "    def forward(self, input):\n",
+    "        output = torch.tanh(self.bn1(self.conv1(input)))      \n",
+    "        output = torch.tanh(self.bn2(self.conv2(output)))     \n",
+    "        output = self.pool(output)                        \n",
+    "        output = torch.tanh(self.bn4(self.conv4(output)))     \n",
+    "        output = torch.tanh(self.bn5(self.conv5(output))) \n",
+    "        output = output.view(-1, 24*10*10)\n",
+    "        output = self.fc1(output)\n",
+    "        output = torch.tanh(output)\n",
+    "\n",
+    "        return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc7728ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Network()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2d365d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "1751a916",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchvision.models as models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "a47c9f21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AlexNet(\n",
+       "  (features): Sequential(\n",
+       "    (0): Conv2d(3, 64, kernel_size=(11, 11), stride=(4, 4), padding=(2, 2))\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (3): Conv2d(64, 192, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
+       "    (4): ReLU(inplace=True)\n",
+       "    (5): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (6): Conv2d(192, 384, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (7): ReLU(inplace=True)\n",
+       "    (8): Conv2d(384, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (9): ReLU(inplace=True)\n",
+       "    (10): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (11): ReLU(inplace=True)\n",
+       "    (12): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  )\n",
+       "  (avgpool): AdaptiveAvgPool2d(output_size=(6, 6))\n",
+       "  (classifier): Sequential(\n",
+       "    (0): Dropout(p=0.5, inplace=False)\n",
+       "    (1): Linear(in_features=9216, out_features=4096, bias=True)\n",
+       "    (2): ReLU(inplace=True)\n",
+       "    (3): Dropout(p=0.5, inplace=False)\n",
+       "    (4): Linear(in_features=4096, out_features=4096, bias=True)\n",
+       "    (5): ReLU(inplace=True)\n",
+       "    (6): Linear(in_features=4096, out_features=1000, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6a9a426",
    "metadata": {},
    "outputs": [],
    "source": []
