rotation + linear training done. Some overfitting observed

--- a/notebooks/set_4/learning_rate_test.ipynb
+++ b/notebooks/set_4/learning_rate_test.ipynb
@@ -3432,7 +3432,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "a323ca2a",
+   "id": "c54d7923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3442,14 +3442,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1124e08",
+   "id": "1e54226a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "91d4d79a",
+   "id": "49826091",
    "metadata": {},
    "source": [
     "# Exp learning rates"
@@ -3458,7 +3458,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "f901b6b6",
+   "id": "23263901",
    "metadata": {},
    "outputs": [
     {
@@ -3500,7 +3500,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "02235ef9",
+   "id": "3c1f91ae",
    "metadata": {},
    "outputs": [
     {
@@ -3526,7 +3526,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "1862e538",
+   "id": "55c1ffce",
    "metadata": {},
    "outputs": [
     {
@@ -3552,7 +3552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2cbc98b",
+   "id": "cc9d2570",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3560,7 +3560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70bbfe93",
+   "id": "a54c457b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3568,14 +3568,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e448597",
+   "id": "547676ef",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4feae2f6",
+   "id": "a72f6088",
    "metadata": {},
    "source": [
     "# Cyclic learning rates"
@@ -3584,7 +3584,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ebaf1d1c",
+   "id": "d280e3d2",
    "metadata": {},
    "outputs": [
     {
@@ -3643,7 +3643,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5400965d",
+   "id": "950d3de2",
    "metadata": {},
    "outputs": [
     {
@@ -3669,7 +3669,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "82684e3e",
+   "id": "55a6165c",
    "metadata": {},
    "outputs": [
     {
@@ -3695,7 +3695,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9789dd89",
+   "id": "e3855a20",
    "metadata": {},
    "outputs": [
     {
@@ -3721,7 +3721,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0bd6512d",
+   "id": "f30c86a1",
    "metadata": {},
    "outputs": [
     {
@@ -3789,7 +3789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d54a65b",
+   "id": "13869fbb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3797,7 +3797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "263e7b03",
+   "id": "a3da5790",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3805,7 +3805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a82aeb5",
+   "id": "0f512cdf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3813,7 +3813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bc5238b",
+   "id": "300c3daf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3821,7 +3821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8a486a6",
+   "id": "d42cd76b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3829,7 +3829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f036f221",
+   "id": "22de1337",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3837,7 +3837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "226d9d0f",
+   "id": "06d7d1c6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3845,7 +3845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb7f337",
+   "id": "4b8ffc57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3853,7 +3853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a400cf8d",
+   "id": "823bb445",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3861,7 +3861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90976354",
+   "id": "551a0ac2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3869,7 +3869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e04c6966",
+   "id": "22a25a39",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3877,7 +3877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a09bc591",
+   "id": "f52769e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3885,9 +3885,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "abccf4e4",
+   "id": "9633177e",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -4445,7 +4445,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "667c367e",
+   "id": "d68065e3",
    "metadata": {},
    "outputs": [
     {
@@ -4467,6 +4467,44 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in callback BaseSelectorEventLoop._read_from_self()\n",
+      "handle: <Handle BaseSelectorEventLoop._read_from_self()>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Anaconda\\lib\\asyncio\\events.py\", line 80, in _run\n",
+      "    self._context.run(self._callback, *self._args)\n",
+      "  File \"C:\\Anaconda\\lib\\asyncio\\selector_events.py\", line 115, in _read_from_self\n",
+      "    data = self._ssock.recv(4096)\n",
+      "ConnectionResetError: [WinError 10054] An existing connection was forcibly closed by the remote host\n",
+      "Exception in callback BaseSelectorEventLoop._read_from_self()\n",
+      "handle: <Handle BaseSelectorEventLoop._read_from_self()>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Anaconda\\lib\\asyncio\\events.py\", line 80, in _run\n",
+      "    self._context.run(self._callback, *self._args)\n",
+      "  File \"C:\\Anaconda\\lib\\asyncio\\selector_events.py\", line 115, in _read_from_self\n",
+      "    data = self._ssock.recv(4096)\n",
+      "ConnectionResetError: [WinError 10054] An existing connection was forcibly closed by the remote host\n",
+      "Exception in callback BaseSelectorEventLoop._read_from_self()\n",
+      "handle: <Handle BaseSelectorEventLoop._read_from_self()>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Anaconda\\lib\\asyncio\\events.py\", line 80, in _run\n",
+      "    self._context.run(self._callback, *self._args)\n",
+      "  File \"C:\\Anaconda\\lib\\asyncio\\selector_events.py\", line 115, in _read_from_self\n",
+      "    data = self._ssock.recv(4096)\n",
+      "ConnectionResetError: [WinError 10054] An existing connection was forcibly closed by the remote host\n",
+      "Exception in callback BaseSelectorEventLoop._read_from_self()\n",
+      "handle: <Handle BaseSelectorEventLoop._read_from_self()>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Anaconda\\lib\\asyncio\\events.py\", line 80, in _run\n",
+      "    self._context.run(self._callback, *self._args)\n",
+      "  File \"C:\\Anaconda\\lib\\asyncio\\selector_events.py\", line 115, in _read_from_self\n",
+      "    data = self._ssock.recv(4096)\n",
+      "ConnectionResetError: [WinError 10054] An existing connection was forcibly closed by the remote host\n"
+     ]
     }
    ],
    "source": [
@@ -4477,7 +4515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66dcc17b",
+   "id": "3b76354b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4485,7 +4523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29cdae78",
+   "id": "2ca7abfc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4493,7 +4531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01146a66",
+   "id": "fa89f931",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4501,7 +4539,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "eaf7ac91",
+   "id": "16cbd69d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4561,7 +4599,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "0ade6cd4",
+   "id": "630c15e6",
    "metadata": {},
    "outputs": [
     {
@@ -4593,7 +4631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2312b9c9",
+   "id": "54c357ac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4601,7 +4639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dde27555",
+   "id": "83e57599",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4609,7 +4647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a669702e",
+   "id": "c8f9c4c3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4617,7 +4655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d82ca53",
+   "id": "86dca2d2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4625,7 +4663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07f756f7",
+   "id": "ab70d12e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4633,7 +4671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "393c421d",
+   "id": "6b6576b9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4641,7 +4679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "370d9bf5",
+   "id": "efb9a4f0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4649,7 +4687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3420e29",
+   "id": "c869dc72",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4657,7 +4695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c18ae0f8",
+   "id": "ab51d12b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4665,7 +4703,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "f90addec",
+   "id": "42e54a7f",
    "metadata": {
     "scrolled": true
    },
@@ -5225,7 +5263,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "b227ebfd",
+   "id": "673b02d5",
    "metadata": {},
    "outputs": [
     {
@@ -5257,7 +5295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f4080d8",
+   "id": "2e8e783e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5265,7 +5303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b38e8da5",
+   "id": "4b4e3a63",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5273,7 +5311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88cd49ed",
+   "id": "9bfbb049",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5281,7 +5319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8ce73c9",
+   "id": "3fe930b1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5289,7 +5327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2326c7ad",
+   "id": "4d8f0240",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5297,7 +5335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "471cedda",
+   "id": "d9aca7c6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5305,7 +5343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeb96a44",
+   "id": "3ebcc6e9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5313,7 +5351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cd6a2ad",
+   "id": "b3247594",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5321,7 +5359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ea2a5e6",
+   "id": "a1e28b0e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5329,7 +5367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "743027a2",
+   "id": "b511feb5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5337,7 +5375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "183bc8aa",
+   "id": "03af2757",
    "metadata": {},
    "outputs": [],
    "source": []
