--- a/notebooks/set_7/100000_data_set.ipynb
+++ b/notebooks/set_7/100000_data_set.ipynb
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "117eba59",
+   "id": "5452ebbb",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6711d19a",
+   "id": "56fc00b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8ddf90f2",
+   "id": "a44b2b09",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8bab07d0",
+   "id": "811fbd52",
    "metadata": {
     "scrolled": false
    },
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1d13cc0d",
+   "id": "556b4d20",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d83cfd99",
+   "id": "28611ee5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3852fa2c",
+   "id": "1d2ac4bf",
    "metadata": {},
    "outputs": [
     {
@@ -900,18 +900,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "96ffb4de",
+   "execution_count": 14,
+   "id": "5067fb65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = model(batch[0])"
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a87d2eea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = time.time()\n",
+    "output = model(batch[0])\n",
+    "end = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f594f97b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.008976221084594727"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "end - start"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "66ca0423",
+   "id": "5d246617",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "17aafc3e",
+   "id": "74c175ba",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d67e259",
+   "id": "ae7e9da4",
    "metadata": {},
    "outputs": [],
    "source": []
